css/main.css
/* ... */
p {
  font-size: .875em;
  line-height: 1.285;
}

img {
  width: 100%;
}

figure {
  margin: 0;
}

address {
  font-style: normal;
  text-align: center;
}

.content-wrapper {
  width: 90%;
  margin: 50px 0;
}

   /*--------------- Base  Header - Footer Styles ---------------*/

header,
footer {
    background-color: #202322;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: row wrap;
}

header {
    padding: 15px 0;
    text-transform: uppercase;
}

header figure {
  width: 60%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
}

header .content-wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: row wrap;
    margin: 0;
}

.header-divider {
    width: 100%;
    margin: 10px 0 20px 0;
}

header nav {
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-flow: row wrap;
    width: 60%;

}

header nav ul {
    display: flex;
    justify-content: space-around;
    align-items: center;
    width: 100%;
    padding: 0;
}

footer p {
  margin: 0;
}

footer .content-wrapper {
  width: 55%;
  margin: 50px 0;
}

footer .contact {
    margin-bottom: 50px;
}

footer .social {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: row wrap;
}

footer i {
  font-size: 2em;
}

footer .social-icons {
    display: flex;
    justify-content: space-around;
    align-items: center;
    width: 100%;
}

footer .social-icons p {
    display: flex;
    justify-content: center;
    align-items: center;
}

footer .copyright {
    margin: 20px 0;
    text-align: center;
    width: 65%;
}

/* Mobile Homepage */

/* Hero Area */

.hero-area {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    flex-flow: row wrap;
    height: 500px;
    background: url('../img/jake-melara-30679-unsplash.jpg') center no-repeat #333;
    background-size: cover;
}

.hero-area .content-wrapper {
  margin-top: 20px;
}

.hero-area h1 {
  font-family: 'Poppins', sans-serif;
  font-weight: 500;


}

/* Aside */

aside {
    background-color: #527158;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: row wrap;
}

aside .content-wrapper {
    margin: 30px 0 50px;
}

aside .form-description {

}

aside p {
    margin: 0;
}

aside h3 {
 margin-bottom: 8px;
}

aside .signup-form {
  margin-top: 30px;
}

input[type=text] {
  box-sizing: border-box;
  width: 100%;
  color: #2a423a;
  font-style: italic;
}

input[type=button] {
  width: 100%;
  padding: 20px 0;
  margin-top: 20px;
  background-color: #2a423a;
  font-family: 'Poppins', Helvetica, Arial, sans-serif;
  font-weight: 500;
  font-size: 1.125em;
  color: #e2e3ed;
  border: none;
  text-align: center;
  text-transform: uppercase;
}

/* Features */

.features {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: row wrap;
    background: url('../img/rawpixel-800820-unsplash1.jpg') center no-repeat #333;
    background-size: cover;
   }

.features h2 {
    margin-bottom: 60px;
    width: 88%;
}

.features .features-items {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: row wrap;

}

.features article {
  width: 55%;
  margin: 30px 0;
}

.features p {
  margin: 0;
  text-align: center;
}

.features i {
  font-size: 3.75em;
  margin-bottom: 40px;

}


/* Reviews */

.reviews {
    background-color: #2a423a;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: row wrap;
}

.reviews .content-wrapper article {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
}

.reviews .content-wrapper figure {
  width: 88%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
}

.reviews .content-wrapper div {
  width: 88%;
}

.reviews .content-wrapper h2 {
  text-align: left;
  width: 90%;
  /* margin-left: 38px; */
}

.reviews h3 {
  width: 55%;
  margin: 20px 0;
}

/*============================================================================
About
=============================================================================*/

/* Mission */

.mission {
    background-color: #527158;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: row wrap;
}

/* Map */

.map iframe {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;

}

.map figure {
  width: 100%;
  height: 0;
  padding-bottom: 93%;
  overflow: hidden;
  position: relative;
}

/* Contact */

.contact-section {
    background-color: #2a423a;
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-flow: row wrap;
}

.contact-section .contact-content {
  text-align: left;
}


/*============================================================================
FAQ
==============================================================================*/

.faq {
    background-color: #527158;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: row wrap;
}

.faq .content-wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: row wrap;
}

/* .faq h2,
.faq h4 {
  font-weight: 500;
} */


/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden {
    display: none !important;
}
/* ... */

